    - Queens have 100% to spawn 2 broodlings, 50% to spawn 3 broodlings, 10% to spawn 5 broodlings at source location, per attack.
    - Queen's acid attack now lower to 75% to spawn.
    - Guardian has 33% to spawn a scourge when it attacks.
    - Devourer has 50% to spawn a scourge when it attacks.
    - Overlord have 100% to spawn 2 zerglings, 50% to a droppable unit, 50% to spawn 2 scourge.  Spawn time lowered from 45-30s to 30-15s.
    - Infested Command Center have higher chance to spawn suicidal units as support building.
    - Changed short range sunker from 14 to 15 range.
    - Adjusted spawn table for various structures

  Graphics:
    - Removed integration animation for unit-spawners, not applicable and cause unintended affect on HD graphic.
    - Fixed shadows after integration animation removal.
    - Changed explosion animation_speed to 0.2 (12fps)
    - Changed death animation_speed to 0.15 (9fps)
    - Changed run, attack animation_speed to 0.5 (30fps)
    - Removed purple dying explosion on some units.


---------------------------------------------------------------------------------------------------
Version: 1.19.0
Date: 2023-03-12

  Features:
    - Added support for Milestones mod.
    - "Default" enemy spawner generating method now group enemy spawns together.

  Changes:
    - Changed code to use new remote interface name
    - Tweaked feature groups.

---------------------------------------------------------------------------------------------------
Version: 1.18.2
Date: 2023-01-13

  Changes:
    - Add support for pollution to join attack multiplier setting

---------------------------------------------------------------------------------------------------
Version: 1.18.1
Date: 2022-12-16

  Changes:
    - Fix boss map color

---------------------------------------------------------------------------------------------------
Version: 1.18.0
Date: 2022-12-12

  Major Features: