@@ -46,7 +46,7 @@ local incremental_cold_resistance = 85
 -- Handles Attack Speed
 
 local base_attack_speed = 1800
-local incremental_attack_speed = 900
+local incremental_attack_speed = 600
 
 local attack_range = ERM_Config.get_max_attack_range()
 
